--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +8,7 @@
     grid-template-columns: 30% 70%;
 }
 .sidebar{
-    background-color: #25ebcd;
+    background-color: #25c0eb;
     height: 100vh;
     color: white;
 }
@@ -17,12 +18,28 @@
     justify-content: center;
     align-items: center;
     margin: 20px 0;
+    gap: 10px;
+    font-family: "Roboto", sans-serif;
 }
 .icon-text{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    margin: 20px 50px;
+}
+.icon-text p{
+    margin-left: 10px;
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
+}
+.list-items-below{
+    margin-top: 100px;
+}
+.list-icons{
+    height: 40px;
+    width: 40px;
+    fill: rgb(255, 255, 255);
 }
 .main{
     background-color: white;
