--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 /* maingrid */
 .grid{
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 20% 80%;
 }
 .sidebar{
-    background-color: #25c0eb;
+    background-color: #29937a;
     height: 100vh;
     color: white;
 }
@@ -18,7 +18,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
+    margin: 50px 0;
     gap: 10px;
     font-family: "Roboto", sans-serif;
 }
@@ -27,19 +27,19 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin: 20px 50px;
+    margin: 10px 30px;
 }
 .icon-text p{
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 17px;
     font-family: "Roboto", sans-serif;
 }
 .list-items-below{
     margin-top: 100px;
 }
 .list-icons{
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     fill: rgb(255, 255, 255);
 }
 .main{
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 15px 20px;
+    margin: 5px 10px;
 }
 .form-input{
     width: 500px;
@@ -66,17 +66,22 @@
     border-radius: 10px;
     border: 1px solid gainsboro;
     margin-left: 20px;
-    margin-right: 400px;
-    height: 25px;
+    margin-right: 200px;
+    height: 20px;
 }
 .navbar-avtr{
-    margin: 0 20px;
-    width: 80px; 
+    margin: 0 10px;
+    width: 70px; 
+}
+.navbar img{
+    margin: 5px 10px;
 }
 .navbar h4 {
     font-family: "roboto";
-    font-size: 20px;
+    font-size: 15px;
+    margin: 5px;
 }
+/* welcome text */
 .welcome{
     display: flex;
     flex-direction: row;
@@ -102,16 +107,16 @@
     margin-right: 10px;
 }
 .btn{
-    background-color: #25c0eb;
+    background-color:  #29937a;
     color: white;
     width: 70px;
     height: 35px;
-    border: 1px solid #25c0eb;
+    border: 1px solid  #29937a;
     border-radius: 20px;
 }
 /* Main content page */
 .main-content{
-    background-color: #d4d4d4;
+    background-color: #e4f4f4;
     display: grid;
     grid-template-columns: 70% 30%;
 }
@@ -121,21 +126,21 @@
 }
 .card{
     background-color: white;
-    border-left: 8px solid rgb(235, 182, 21);
+    border-left: 8px solid rgb(44, 178, 111);
     border-radius: 10px;
-    width: 90%;
-    height: 200px;
-    margin: 30px 0;
+    width: 80%;
+    height: 130px;
+    margin: 25px 0;
     margin-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items:  flex-start;
     padding-left: 15px;
-
+    
 }
 .icons{
-    width: 70px;
+    width: 53px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -143,11 +148,11 @@
     padding-left: 75%;   
 }
 h6{
-    font-size: 18px;
+    font-size: 15px;
     font-family: "roboto";
 }
 .card p {
-    font-size: 20px;
+    font-size: 15px;
     color: #a3a3a3;
     margin: 10px 0;
 }
@@ -158,45 +163,60 @@ h4{
     font-family: "roboto";
     font-size: 25px;
 }
+
+/* Announcement card styling */
 .ann-trend{
     display: grid;
     grid-template-rows: 50% 50%;
     
 }
-.ann-card, .trend-card{
-    height: 80%;
+.ann-trend h4{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.ann-card{
+    height: 84%;
     width: 80%;
     background-color: white;
     border-radius: 10px;
 }
 .ann-text{
-    padding: 5px 10px;
+    padding: 10px 10px;
+    margin-left: 5px;
 }
 .ann-text h6{
-    font-size: 18px;
+    font-size: 12px;
     font-family: "roboto";
+    margin-bottom: 2px;
 }
 .ann-text p {
-    font-size: 18px;
-    color: #a3a3a3;   
+    font-size: 9px;
+    color: #a3a3a3;
+    margin-left: 8px;   
 }
 .divider{
     border: 0.5px solid #25c0eb ;
     width: 80%;
-    margin: 10px;
+    margin: 4px;
+    margin-left: 20px;
 }
+/* trending card styling */
 .trend-card{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    background-color: white;
+    height: 180px;
+    width: 80%;
+    padding: 10px;
+    border-radius: 10px;
 }
 .trend-image-text{
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin:10px 20px;
+    margin:14px 25px;
+    margin-right: 10px;
 }
-.trend-text{
-    margin-left: 20px;
+.trend-text, h6 {
+    margin-left: 10px;
+    font-family: "roboto";
+    font-size: 13px;
 }
